fix image alignment in projects

--- a/src/components/Summary/PortfolioCSS.css
+++ b/src/components/Summary/PortfolioCSS.css
@@ -60,7 +60,6 @@
   margin-top: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   padding: 0 30px;
 }
